# Cyber-Project

./: README.md  config.json  docker-compose.yml  dockerfile  package-lock.json  pyproject.toml
Backend/: anomaly_detection.py  config.json  deep_learning.py  detection_api.py  feature_engineering.py  feature_extraction.py  packet_capture.py  pyshark_capture.py  sample_client.py  train_dl.py  train_ml.py
Backend/Deep_Learning/: deep_learning.py
Backend/tests/: conftest.py  test_anomaly_detection.py  test_deep_learning.py  test_detection_api.py  test_feature_engineering.py  test_feature_extraction.py  test_packet_capture.py  test_pyshark_capture.py  test_sample_client.py
Project Development Plan/: README.md
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/alerts/: AlertDetails.jsx  AlertFilters.jsx  AlertsList.jsx
frontend/src/components/common/: Header.jsx  Notification.jsx  Sidebar.jsx
frontend/src/components/config/: AlertConfig.jsx  ConfigPanel.jsx  TestAlert.jsx
frontend/src/components/dashboard/: AnomalyTrend.jsx  Dashboard.jsx  StatisticCard.jsx
frontend/src/components/network/: FlowDetails.jsx  FlowTable.jsx  NetworkGraph.jsx
frontend/src/context/: APIContext.jsx  AppContext.jsx
frontend/src/hooks/: usePolling.js  useWebSocket.js
frontend/src/utils/: api.js  formatters.js
