[tool.poetry]
name = "cyber-security-project-pt2"
version = "0.1.0"
description = "Network anomaly detection project using multiple capture, feature extraction, and detection techniques."
authors = ["Yash Swaminathan <yashswaminathan1@gmail.com>"]
license = "MIT"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.2"
requests = "^2.31.0"
pyshark = "^0.4.2"
scapy = "^2.5.0"
pandas = "^1.5.3"
numpy = "^1.24.0"
scipy = "^1.9.3"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
tensorflow = "^2.10.0"
tensorflow-io-gcs-filesystem = "0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"